...

enum ActivityType {
  share,
  update,
  request,
  group,
  view,
}

class ActivityIcon {
  final IconData icon;
  final Color? color;

...
